Created foundation for the SAX Fast Infoset parser.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1063 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/btfi/Makefile.am
+++ b/btech/btfi/Makefile.am
@@ -12,7 +12,7 @@ check_PROGRAMS = saxtest vocabtest
 
 TESTS = saxtest vocabtest
 
-saxtest_SOURCES = tests/dummy.cc tests/saxtest.c
+saxtest_SOURCES = tests/saxtest.cc tests/saxwrite.c tests/saxread.c
 saxtest_LDADD = libbtfi.la
 
 vocabtest_SOURCES = tests/vocabtest.cc
