Converted Fast Infoset generator to Encoder/Decoder architecture; will finish converting parsing tomorrow.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1070 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/btfi/Makefile.am
+++ b/btech/btfi/Makefile.am
@@ -1,8 +1,8 @@
 noinst_LTLIBRARIES = libbtfi.la
 
 libbtfi_la_SOURCES = \
-	sax.cc encutil.cc Document.cc Element.cc \
-	sax.h  encutil.hh Document.hh Element.hh Attributes.hh \
+	sax.cc Codec.cc Document.cc Element.cc \
+	sax.h  Codec.hh Document.hh Element.hh Attributes.hh \
 	Name.cc         Value.cc          MutableAttributes.cc \
 	Name.hh names.h Value.hh values.h MutableAttributes.hh attribs.h \
 	Vocabulary.cc VocabSimple.cc \
