Fast Infoset: Added support for the Comment type, and preliminary, broken support for the Characters type.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1072 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/btfi/Makefile.am
+++ b/btech/btfi/Makefile.am
@@ -1,14 +1,15 @@
 noinst_LTLIBRARIES = libbtfi.la
 
 libbtfi_la_SOURCES = \
-	sax.cc Codec.cc Document.cc Element.cc \
-	sax.h  Codec.hh Document.hh Element.hh Attributes.hh \
+	sax.cc Codec.cc                 Document.cc Element.cc \
+	sax.h  Codec.hh Serializable.hh Document.hh Element.hh Attributes.hh \
 	Name.cc         Value.cc          MutableAttributes.cc \
 	Name.hh names.h Value.hh values.h MutableAttributes.hh attribs.h \
 	Vocabulary.cc VocabSimple.cc \
 	Vocabulary.hh VocabSimple.hh VocabTable.hh \
-	encalg.c stream.c common.c \
-	encalg.h stream.h common.h ObjectPool.hh Exception.hh
+	encalg.c stream.c errors.c \
+	encalg.h stream.h errors.h common.h fiptypes.h \
+	ObjectPool.hh Exception.hh
 
 check_PROGRAMS = saxtest vocabtest
 
