--- a/btech/btfi/Makefile.in
+++ b/btech/btfi/Makefile.in
@@ -47,7 +47,7 @@ LTLIBRARIES = $(noinst_LTLIBRARIES)
 libbtfi_la_LIBADD =
 am_libbtfi_la_OBJECTS = sax.lo Codec.lo Document.lo Element.lo Name.lo \
 	Value.lo MutableAttributes.lo Vocabulary.lo VocabSimple.lo \
-	encalg.lo stream.lo common.lo
+	encalg.lo stream.lo errors.lo
 libbtfi_la_OBJECTS = $(am_libbtfi_la_OBJECTS)
 am_saxtest_OBJECTS = saxtest.$(OBJEXT) saxwrite.$(OBJEXT) \
 	saxread.$(OBJEXT)
@@ -192,14 +192,15 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 noinst_LTLIBRARIES = libbtfi.la
 libbtfi_la_SOURCES = \
-	sax.cc Codec.cc Document.cc Element.cc \
-	sax.h  Codec.hh Document.hh Element.hh Attributes.hh \
+	sax.cc Codec.cc                 Document.cc Element.cc \
+	sax.h  Codec.hh Serializable.hh Document.hh Element.hh Attributes.hh \
 	Name.cc         Value.cc          MutableAttributes.cc \
 	Name.hh names.h Value.hh values.h MutableAttributes.hh attribs.h \
 	Vocabulary.cc VocabSimple.cc \
 	Vocabulary.hh VocabSimple.hh VocabTable.hh \
-	encalg.c stream.c common.c \
-	encalg.h stream.h common.h ObjectPool.hh Exception.hh
+	encalg.c stream.c errors.c \
+	encalg.h stream.h errors.h common.h fiptypes.h \
+	ObjectPool.hh Exception.hh
 
 saxtest_SOURCES = tests/saxtest.cc tests/saxwrite.c tests/saxread.c
 saxtest_LDADD = libbtfi.la
@@ -277,8 +278,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Value.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/VocabSimple.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Vocabulary.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/common.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/encalg.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/errors.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sax.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/saxread.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/saxtest.Po@am__quote@
