Added skeleton to start implementing Fast Infoset-based hcode.db.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1077 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/src/Makefile.am
+++ b/btech/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CPPFLAGS = $(BTPR_INCLUDE) -I$(srcdir)/include -I$(srcdir)/btech \
-	-I$(srcdir)/btfi
+	-I$(top_srcdir)/btfi/include
 
 if BTPR_MUX1
 BTPR_INCLUDE = -I$(top_srcdir)/../include -I$(top_srcdir)/../src
