--- a/btech/btfi/Makefile.in
+++ b/btech/btfi/Makefile.in
@@ -190,6 +190,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+AM_CPPFLAGS = -I $(srcdir)/include
 noinst_LTLIBRARIES = libbtfi.la
 libbtfi_la_SOURCES = \
 	sax.cc Codec.cc                 Document.cc Element.cc \
