--- a/btech/src/Makefile.in
+++ b/btech/src/Makefile.in
@@ -203,7 +203,7 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = $(BTPR_INCLUDE) -I$(srcdir)/include -I$(srcdir)/btech \
-	-I$(srcdir)/btfi
+	-I$(top_srcdir)/btfi/include
 
 @BTPR_MUX1_TRUE@BTPR_INCLUDE = -I$(top_srcdir)/../include -I$(top_srcdir)/../src
 @BTPR_PENN_TRUE@BTPR_INCLUDE = -I$(btpr_dir)/penn/include -I$(btpr_dir)/include
