Fast Infoset: Vocabulary now created separately from parser/generator.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1079 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/btfi/Makefile.am
+++ b/btech/btfi/Makefile.am
@@ -3,15 +3,17 @@ AM_CPPFLAGS = -I $(srcdir)/include
 noinst_LTLIBRARIES = libbtfi.la
 
 libbtfi_la_SOURCES = \
-	sax.cc Codec.cc                 Document.cc Element.cc \
-	sax.h  Codec.hh Serializable.hh Document.hh Element.hh Attributes.hh \
-	Name.cc         Value.cc          MutableAttributes.cc \
-	Name.hh names.h Value.hh values.h MutableAttributes.hh attribs.h \
+	sax.cc                 Codec.cc Document.cc Element.cc \
+	       Serializable.hh Codec.hh Document.hh Element.hh Attributes.hh \
+	Name.cc Value.cc MutableAttributes.cc \
+	Name.hh Value.hh MutableAttributes.hh \
 	Vocabulary.cc VocabSimple.cc \
 	Vocabulary.hh VocabSimple.hh VocabTable.hh \
 	encalg.c stream.c errors.c \
-	encalg.h stream.h errors.h common.h fiptypes.h \
-	ObjectPool.hh Exception.hh
+	encalg.h stream.h common.h \
+	ObjectPool.hh Exception.hh \
+	include/sax.h include/names.h include/values.h include/attribs.h \
+	include/vocab.h include/errors.h include/fiptypes.h
 
 check_PROGRAMS = saxtest vocabtest
 
