--- a/Makefile.in
+++ b/Makefile.in
@@ -34,7 +34,7 @@ host_triplet = @host@
 subdir = .
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/autoconf.h.in \
-	$(top_srcdir)/configure AUTHORS COPYING ChangeLog INSTALL NEWS \
+	$(top_srcdir)/configure AUTHORS LICENSE ChangeLog INSTALL NEWS \
 	confutil/config.guess confutil/config.sub confutil/depcomp \
 	confutil/install-sh confutil/ltmain.sh confutil/missing
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
