Refactored new btechdb code, to make it easier to add various unrelated subdatabases.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1090 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/src/Makefile.am
+++ b/btech/src/Makefile.am
@@ -14,7 +14,7 @@ endif
 lib_LTLIBRARIES = libbtech.la
 
 libbtech_la_SOURCES = coolmenu.c debug.c events.c glue.hcode.c glue.c \
-	glue.scode.c xcode_io.c xcode_io.h \
+	glue.scode.c btdb.c btdb.h btdb_int.h xcode_io.c xcode_io.h \
 	mech.lostracer.c mechfile.c spath.c tick.c mt19937ar.c \
 	btech/aero.bomb.c btech/aero.move.c btech/artillery.c \
 	btech/autopilot_ai.c btech/autopilot_autogun.c \
