--- a/btech/btfi/Makefile.in
+++ b/btech/btfi/Makefile.in
@@ -222,9 +222,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  btfi/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  btfi/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  btfi/Makefile
+	  $(AUTOMAKE) --foreign  btfi/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
