--- a/btech/btpr/Makefile.in
+++ b/btech/btpr/Makefile.in
@@ -208,9 +208,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  btpr/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  btpr/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  btpr/Makefile
+	  $(AUTOMAKE) --foreign  btpr/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
