Adding --disable-bt-cargocmds as per SF RFE. Disables loadcargo/unloadcargo/manifest/stores. This will allow admins to create replacements that behave entirely different. There were some other files automatically touched by the autoconf'ing. My version of autoconf appears to be generating things slightly different, so make sure this still works for you.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1181 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/autoconf.h.in
+++ b/btech/autoconf.h.in
@@ -9,6 +9,9 @@
 /* Should the advanced econ system be enabled */
 #undef BT_ADVANCED_ECON
 
+/* Should the cargo commands be enabled */
+#undef BT_CARGO_COMMANDS
+
 /* Should complex repairs be enabled */
 #undef BT_COMPLEXREPAIRS
 
