Makefile updates in btech lib for Mux2 assistance
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1432 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/btpr/Makefile.am
+++ b/btech/btpr/Makefile.am
@@ -2,6 +2,10 @@ if BTPR_PENN
 MAYBE_PENN = -I$(srcdir)/penn/include
 endif
 
+if BTPR_MUX2
+MAYBE_MUX2 = -I$(srcdir)/mux2/include
+endif
+
 AM_CPPFLAGS = $(MAYBE_PENN) -I$(srcdir)/include
 
 noinst_LTLIBRARIES = libbtpr.la
