--- a/btech/src/Makefile.in
+++ b/btech/src/Makefile.in
@@ -213,6 +213,10 @@ AM_CPPFLAGS = $(BTPR_INCLUDE) -I$(srcdir)/include -I$(srcdir)/btech \
 @BTPR_PENN_TRUE@BTPR_INCLUDE = -I$(btpr_dir)/penn/include -I$(btpr_dir)/include
 @BTPR_PENN_TRUE@AM_LDFLAGS = -Wl,-Bsymbolic
 @BTPR_PENN_TRUE@BTPR_LIBS = ../btpr/libbtpr.la
+@BTPR_MUX2_TRUE@BTPR_INCLUDE = -I$(btpr_dir)/mux2/include -I$(btpr_dir)/include
+@BTPR_MUX2_TRUE@AM_LDFLAGS = -Wl,-Bsymbolic
+@BTPR_MUX2_TRUE@BTPR_LIBS = ../btpr/libbtpr.la
+
 lib_LTLIBRARIES = libbtech.la
 libbtech_la_SOURCES = coolmenu.c debug.c events.c glue.hcode.c glue.c \
 	glue.scode.c btdb.c btdb.h btdb_int.h xcode_io.c xcode_io.h \
